--- a/boards/shields/charybdis/charybdis_3610.dtsi
+++ b/boards/shields/charybdis/charybdis_3610.dtsi
@@ -39,16 +39,17 @@
     cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
 
 trackball: trackball@0 {
+trackball: trackball@0 {
     status = "okay";
     compatible = "pixart,pmw3610";
     reg = <0>;
     spi-max-frequency = <2000000>;
     irq-gpios = <&gpio0 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-    motion-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;  // Added required motion-gpios
+    motion-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
     cpi = <300>;
-    evt-type = <INPUT_EV_REL>;
-    x-input-code = <INPUT_REL_X>;
-    y-input-code = <INPUT_REL_Y>;
+    zephyr,axis-x = <INPUT_REL_X 0 255 0>;
+    zephyr,axis-y = <INPUT_REL_Y 0 255 0>;
 };
 };
+
 
