--- a/boards/shields/charybdis/charybdis_3610.dtsi
+++ b/boards/shields/charybdis/charybdis_3610.dtsi
@@ -32,24 +32,21 @@
 
 &spi0 {
     status = "okay";
-    compatible = "nordic,nrf-spim";
-    pinctrl-0 = <&spi0_default>;
-    pinctrl-1 = <&spi0_sleep>;
-    pinctrl-names = "default", "sleep";
-    cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
 
-trackball: trackball@0 {
-    status = "okay";
-    compatible = "pixart,pmw3610";
-    reg = <0>;
-    spi-max-frequency = <2000000>;
-    irq-gpios = <&gpio0 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-    motion-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
-    cpi = <300>;
-    zephyr,axis-x = <INPUT_REL_X 0 255 0>;
-    zephyr,axis-y = <INPUT_REL_Y 0 255 0>;
+    trackball: trackball@0 {
+        status = "okay";
+        compatible = "pixart,pmw3610";
+        reg = <0>;
+        spi-max-frequency = <2000000>;
+        irq-gpios = <&gpio0 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        motion-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
+        cpi = <300>;
+
+        zephyr,axis-x = <0x00>;  // REL_X
+        zephyr,axis-y = <0x01>;  // REL_Y
+    };
 };
-};
+
 
 
 
