--- a/boards/shields/charybdis/charybdis_3610.dtsi
+++ b/boards/shields/charybdis/charybdis_3610.dtsi
@@ -11,27 +11,13 @@
 #define INPUT_REL_HWHEEL 0x06           /**< Relative horizontal wheel coordinate */
 #define INPUT_REL_MISC 0x09             /**< Relative misc coordinate */
 
-&pinctrl {
-    spi0_default: spi0_default {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
-                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
-                <NRF_PSEL(SPIM_MISO, 0, 17)>;
-        };
-    };
-
-    spi0_sleep: spi0_sleep {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
-                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
-                <NRF_PSEL(SPIM_MISO, 0, 17)>;
-            low-power-enable;
-        };
-    };
-};
-
 &spi0 {
     status = "okay";
+
+    pinctrl-0 = <&spi0_default>;
+    pinctrl-1 = <&spi0_sleep>;
+    pinctrl-names = "default", "sleep";
+    cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
 
     trackball: trackball@0 {
         status = "okay";
@@ -46,6 +32,23 @@
         zephyr,axis-y = <0x01>;  // REL_Y
     };
 };
+
+&pinctrl {
+    spi0_default: spi0_default {
+        psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
+               <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+               <NRF_PSEL(SPIM_MISO, 0, 17)>;
+    };
+
+    spi0_sleep: spi0_sleep {
+        psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
+               <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+               <NRF_PSEL(SPIM_MISO, 0, 17)>;
+        low-power-enable;
+    };
+};
+
+
 
 
 
