--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 ---
 include:
   - board: nice_nano
-    shield: charybdis_dongle #dongle_display
+    shield: charybdis_dongle dongle_display
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=n
 
