--- a/boards/shields/charybdis/charybdis_3610.dtsi
+++ b/boards/shields/charybdis/charybdis_3610.dtsi
@@ -11,9 +11,28 @@
 #define INPUT_REL_HWHEEL 0x06           /**< Relative horizontal wheel coordinate */
 #define INPUT_REL_MISC 0x09             /**< Relative misc coordinate */
 
+&pinctrl {
+    spi0_default: spi0_default {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+                <NRF_PSEL(SPIM_MISO, 0, 17)>;
+        };
+    };
+
+    spi0_sleep: spi0_sleep {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+                <NRF_PSEL(SPIM_MISO, 0, 17)>;
+            low-power-enable;
+        };
+    };
+};
+
 &spi0 {
     status = "okay";
-
+    compatible = "nordic,nrf-spim";
     pinctrl-0 = <&spi0_default>;
     pinctrl-1 = <&spi0_sleep>;
     pinctrl-names = "default", "sleep";
@@ -21,36 +40,13 @@
 
     trackball: trackball@0 {
         status = "okay";
-        compatible = "pixart,pmw3610";
+        compatible = "pixart,pmw3610-alt";
         reg = <0>;
         spi-max-frequency = <2000000>;
-        motion-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
-
-        zephyr,axis-x = <0x00>;  // REL_X
-        zephyr,axis-y = <0x01>;  // REL_Y
+        irq-gpios = <&gpio0 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        cpi = <800>;
+        evt-type = <INPUT_EV_REL>;
+        x-input-code = <INPUT_REL_X>;
+        y-input-code = <INPUT_REL_Y>;
     };
 };
-
-
-&pinctrl {
-    spi0_default: spi0_default {
-        psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
-               <NRF_PSEL(SPIM_MOSI, 0, 17)>,
-               <NRF_PSEL(SPIM_MISO, 0, 17)>;
-    };
-
-    spi0_sleep: spi0_sleep {
-        psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
-               <NRF_PSEL(SPIM_MOSI, 0, 17)>,
-               <NRF_PSEL(SPIM_MISO, 0, 17)>;
-        low-power-enable;
-    };
-};
-
-
-
-
-
-
-
-
