--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,7 @@ include:
   - board: nice_nano
     shield: charybdis_dongle dongle_display
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=n
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
   - board: nice_nano
     shield: charybdis_left
