--- a/boards/shields/dongle_display/dongle_display.conf
+++ b/boards/shields/dongle_display/dongle_display.conf
@@ -1,2 +1,5 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=4096
+CONFIG_ZMK_DONGLE_DISPLAY_LAYER=n
+CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
